fixed clipping text

--- a/src/styles/animator.css
+++ b/src/styles/animator.css
@@ -173,7 +173,6 @@
     transform: translateX(100%);
     animation: move 30s linear infinite;
     white-space: nowrap;
-    overflow-x: hidden;
 }
     
     @keyframes move {
